# 24x7_Technical_Assessment

./: main.py  pyproject.toml
