[project]
name = "24x7-technical-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.1.0",
    "boto3>=1.42.47",
    "dotenv>=0.9.9",
    "isort>=7.0.0",
    "langchain>=1.2.10",
    "langchain-aws>=1.2.5",
]
